# Stock_Analyzer

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  SPECKIT_ANALYZE_REPORT.md  drizzle.config.ts  eslint.config.mjs  middleware.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  violet-progress.md  vitest.config.ts
.cursor/rules/: specify-rules.mdc
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  cursor-agent.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
app/: globals.css  layout.tsx
app/(app)/: layout.tsx
app/(public)/: layout.tsx  page.tsx
components/magic/: BentoGrid.tsx  MagicCard.tsx  Marquee.tsx  NumberTicker.tsx
components/shared/: ChangePercent.tsx  StockBadge.tsx
components/ui/: bento-grid.tsx  magic-card.tsx  marquee.tsx  number-ticker.tsx
hooks/: useAuth.ts
lib/auth/: long-lived-token.ts
lib/db/: index.ts
lib/deepseek/: client.ts  prompts.ts
sealos/scheduler/: Dockerfile  audit.py  config.py  main.py  pyproject.toml  pytest.ini  requirements.txt  sealos-deploy.yml
sealos/scheduler/clients/: aktools.py  deepseek.py  supabase.py
sealos/scheduler/jobs/: calendar_refresh.py  cleanup.py  initial_backfill.py  stock_daily.py
sealos/scheduler/realtime/: publish.py
sealos/scheduler/tests/: conftest.py  test_calendar_refresh.py  test_cleanup.py  test_failure_isolation.py  test_initial_backfill.py  test_stock_daily.py
stores/: useAppStore.ts
tests/: setup.ts
(+58 files in other folders)
