[project]
name = "stock-analyzer-scheduler"
version = "0.1.0"
description = "Sealos-hosted scheduler for stock-analyzer-final: AKTools/AkShare 行情抓取、DeepSeek AI 产物生成、CLS 资讯、市场日历刷新"
requires-python = ">=3.12,<3.13"
readme = "README.md"

dependencies = [
    "fastapi>=0.115.0,<0.116",
    "uvicorn[standard]>=0.32.0,<0.33",
    "httpx>=0.27.0,<0.28",
    "supabase>=2.10.0,<3",
    "apscheduler>=3.10.4,<4",
    "openai>=1.55.0,<2",
    "pandas>=2.2.0,<3",
    "numpy>=1.26.0,<2.3",
    "akshare>=1.15.0",
    "pandas-market-calendars>=4.4.0",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "pydantic>=2.9.0,<3",
    "pydantic-settings>=2.6.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
